--- a/src/css/atom/extra/_burger-menu.scss
+++ b/src/css/atom/extra/_burger-menu.scss
@@ -5,7 +5,7 @@
 		Burger-menu
 
 	comment:
-		La BurgerMenu est une plante qui se mange froide
+		Burger menu animé
 
 	markup:
 		<div class="burger-menu">
