--- a/src/index.jade
+++ b/src/index.jade
@@ -24,7 +24,7 @@ html(ng-scroll="" ng-app="app" id="html")
 		link(type="text/css", rel="stylesheet", href="css/style.css")
 
 		body#doc
-			svg
+			svg.color-filter
 				filter#protanopia
 					fecolormatrix(values='0.56667 0.43333 0.00000 0 0\
 					0.55833 0.44167 0.00000 0 0\
