--- a/src/templates/animation.jade
+++ b/src/templates/animation.jade
@@ -5,7 +5,6 @@ section#animation.section
   .bloc#animation-ease
     h5 Easings
     hr
-    br
     div
       .ease-wrapper
         .ease-demo.ease-demo-swift-move
@@ -19,6 +18,7 @@ section#animation.section
               .vertical-line
           .dot-wrapper
             .dot.dot-square.dot-straight.dot-swift-move
+              span swift-move
       .ease-wrapper
         .ease-demo.ease-demo-swifter-move
           .grid-wrapper
@@ -31,6 +31,7 @@ section#animation.section
               .vertical-line
           .dot-wrapper
             .dot.dot-square.dot-straight.dot-swifter-move
+              span swifter-move
       .ease-wrapper
         .ease-demo.ease-demo-heavy-move
           .grid-wrapper
@@ -43,6 +44,7 @@ section#animation.section
               .vertical-line
           .dot-wrapper
             .dot.dot-square.dot-straight.dot-heavy-move
+              span heavy-move
       .ease-wrapper
         .ease-demo.ease-demo-swift-in
           .grid-wrapper
@@ -55,6 +57,7 @@ section#animation.section
               .vertical-line
           .dot-wrapper
             .dot.dot-square.dot-straight.dot-swift-in
+              span swift-in
       .ease-wrapper
         .ease-demo.ease-demo-swift-in-bouncy
           .grid-wrapper
@@ -67,6 +70,4 @@ section#animation.section
               .vertical-line
           .dot-wrapper
             .dot.dot-square.dot-straight.dot-swift-in-bouncy
-  br
-  br
-  br
+              span swift-in-bouncy
