--- a/src/templates/color.jade
+++ b/src/templates/color.jade
@@ -54,11 +54,17 @@ section#color.section.color
             span.cmyk
         .gradient
           ._bg-grey-lighten-1
+            i.icon.-pencil
           ._bg-grey
+            i.icon.-pencil
           ._bg-grey-darken-2
+            i.icon.-pencil
           ._bg-grey-darken-3
+            i.icon.-pencil
           ._bg-grey-darken-4
+            i.icon.-pencil
           ._bg-grey-darken-5
+            i.icon.-pencil
         .culture-wrapper
           .culture
       .column._bg-primary
@@ -115,8 +121,64 @@ section#color.section.color
           .culture
   br
   br
-
+  
   #color-semantic.bloc.color
+    h5 Additional
+    hr
+    br
+    br
+    .-last
+      .column._bg-danger
+        .info
+          h5.name._text-danger-contrast-darken-5 ColorName
+          h6._text-danger-contrast-darken-5 Danger
+        .gradient
+          ._bg-danger-lighten-1
+          ._bg-danger
+          ._bg-danger-darken-1
+          ._bg-danger-darken-2
+          ._bg-danger-darken-3
+          ._bg-danger-darken-4
+      .column._bg-success
+        .info
+          h5.name._text-success-contrast-darken-5 ColorName
+          h6._text-success-contrast-darken-5 Success
+        .gradient
+          ._bg-success-lighten-1
+          ._bg-success
+          ._bg-success-darken-1
+          ._bg-success-darken-2
+          ._bg-success-darken-3
+          ._bg-success-darken-4
+      .column._bg-warning
+        .info
+          h5.name._text-warning-contrast-darken-5 ColorName
+          h6._text-warning-contrast-darken-5 Warnings
+        .gradient
+          ._bg-warning-lighten-1
+          ._bg-warning
+          ._bg-warning-darken-1
+          ._bg-warning-darken-2
+          ._bg-warning-darken-3
+          ._bg-warning-darken-4
+      .column._bg-info
+        .info
+          h5.name._text-info-contrast-darken-5 ColorName
+          h6._text-info-contrast-darken-5 Info
+        .gradient
+          ._bg-info-lighten-1
+          ._bg-info
+          ._bg-info-darken-1
+          ._bg-info-darken-2
+          ._bg-info-darken-3
+          ._bg-info-darken-4
+    br
+    br
+    br
+    br
+    br
+    
+  #color-additional.bloc.color
     h5 Others
     hr
     br
