--- a/src/templates/identity.jade
+++ b/src/templates/identity.jade
@@ -2,7 +2,7 @@ header#identity-head
   div
     h3 Identity
 section#identity-section.section
-  #identity-main.bloc
+  #identity-logo.bloc
     h5 Main
     hr
     .two-cols-verticaly-aligned
@@ -11,26 +11,57 @@ section#identity-section.section
         h6 250px
       .wrapper
         img#big(src="assets/imgs/svg/logo.svg")
-  #identity-others.bloc
-    h5 Others
+  #identity-examples.bloc
+    h5 Examples
     hr
-    .two-cols-verticaly-aligned
-      .wrapper
-        h2 Medium logo
-        h6 150px
-      .wrapper
-        img#medium(src="assets/imgs/svg/logo.svg")
-    .two-cols-verticaly-aligned
-      .wrapper
-        h2 Small Logo
-        h6 100px
-      .wrapper
-        img#small(src="assets/imgs/svg/logo.svg")
-    .two-cols-verticaly-aligned
-      .wrapper
-        h2 Favicon
-        h6 16px
-      .wrapper
-        img#favicon(src="assets/imgs/svg/logo.svg")
+    //- .two-cols-verticaly-aligned
+    //-   .wrapper
+    //-     h2 Medium logo
+    //-     h6 150px
+    //-   .wrapper
+    //-     img#medium(src="assets/imgs/svg/logo_preview.svg")
+    //- .two-cols-verticaly-aligned
+    //-   .wrapper
+    //-     h2 Small Logo
+    //-     h6 100px
+    //-   .wrapper
+    //-     img#small(src="assets/imgs/svg/logo_preview.svg")
+    //- .two-cols-verticaly-aligned
+    //-   .wrapper
+    //-     h2 Favicon
+    //-     h6 16px
+    //-   .wrapper
+    //-     img#favicon(src="assets/imgs/svg/logo_preview.svg")
   br
   br
+  section.edit-logos.preview-logo.visible
+    .preview-half.preview-business-card
+      .realism
+      .plogo.skew
+        img(src="assets/imgs/svg/logo_preview.svg")
+    .preview-half.preview-letterhead
+      .realism
+      .plogo.skew
+        img(src="assets/imgs/svg/logo_preview.svg")
+    .preview-half.preview-envelope
+      .realism
+      .plogo.skew
+        img(src="assets/imgs/svg/logo_preview.svg")
+    .preview-half.preview-iphone
+      .realism
+      .plogo.skew
+        img(src="assets/imgs/svg/logo_preview.svg")
+    .preview-full.preview-building
+      .realism
+      .plogo.skew
+        img(src="assets/imgs/svg/logo_preview.svg")
+      .plogo.skew.shadow
+        img(src="assets/imgs/svg/logo_preview.svg")
+    .preview-half.preview-box2
+      .realism
+      .plogo.skew
+        img(src="assets/imgs/svg/logo_preview.svg")
+    .preview-half.preview-box
+      .realism
+      .plogo.skew
+        img(src="assets/imgs/svg/logo_preview.svg")
