--- a/src/templates/navHead.jade
+++ b/src/templates/navHead.jade
@@ -1,4 +1,12 @@
 nav.nav
+  #nav-identity.accordion(ui-sref-active="active")
+    h5.title
+      a(ui-sref='nav.identity') Identity
+    ul
+      li
+        a(href='#identity-logo') Logo
+      li
+        a(href='#identity-examples') Examples
   #nav-typography.accordion(ui-sref-active="active")
     h5.title
       a(ui-sref='nav.typo') Typography
