--- a/src/templates/template.jade
+++ b/src/templates/template.jade
@@ -1,4 +1,98 @@
-header#template-head  div    h3 templatesection.section#template  .bloc#template-Login    h5 Login    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <div id="loginModal" class="modal login">
+header#template-head  div    h3 templatesection.section#template  .bloc#template-Footer    h5 Footer    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <footer id="footer">
+            <div class="container">
+              <div class="row">
+                <div class="three col">
+                  <div id="logo"></div>
+                </div>
+                <div class="three col">
+                  <h6>Réseaux sociaux</h6>
+                  <ul>
+                    <li><a href="#">Google +</a></li>
+                    <li><a href="http://twitter.com/peon_actu">Twitter</a></li>
+                    <li><a href="http://facebook.com/gopeon">Facebook</a></li>
+                  </ul>
+                </div>
+                <div class="three col">
+                  <h6>Presse</h6>
+                  <ul>
+                    <li><a href="#"></a>Contactez-nous</li>
+                    <li><a href="#"></a></li>
+                  </ul>
+                </div>
+                <div class="three col">
+                  <h6>Légal</h6>
+                  <ul>
+                    <li><a href="#">Mentions-légales</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </footer>
+
+
+          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Footer-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Footer-code.              &lt;footer id=&quot;footer&quot;&gt;
+                &lt;div class=&quot;container&quot;&gt;
+                  &lt;div class=&quot;row&quot;&gt;
+                    &lt;div class=&quot;three col&quot;&gt;
+                      &lt;div id=&quot;logo&quot;&gt;&lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class=&quot;three col&quot;&gt;
+                      &lt;h6&gt;Réseaux sociaux&lt;/h6&gt;
+                      &lt;ul&gt;
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Google +&lt;/a&gt;&lt;/li&gt;
+                        &lt;li&gt;&lt;a href=&quot;http://twitter.com/peon_actu&quot;&gt;Twitter&lt;/a&gt;&lt;/li&gt;
+                        &lt;li&gt;&lt;a href=&quot;http://facebook.com/gopeon&quot;&gt;Facebook&lt;/a&gt;&lt;/li&gt;
+                      &lt;/ul&gt;
+                    &lt;/div&gt;
+                    &lt;div class=&quot;three col&quot;&gt;
+                      &lt;h6&gt;Presse&lt;/h6&gt;
+                      &lt;ul&gt;
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;&lt;/a&gt;Contactez-nous&lt;/li&gt;
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;&lt;/a&gt;&lt;/li&gt;
+                      &lt;/ul&gt;
+                    &lt;/div&gt;
+                    &lt;div class=&quot;three col&quot;&gt;
+                      &lt;h6&gt;Légal&lt;/h6&gt;
+                      &lt;ul&gt;
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Mentions-légales&lt;/a&gt;&lt;/li&gt;
+                      &lt;/ul&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/footer&gt;
+
+
+   .bloc#template-Hero    h5 Hero    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <section class="background hero">
+            <div class="main-texture"></div>
+            <div id="main-background"></div>
+            <div id="content" class="container">
+              <div class="twelve col">
+                <h1 class="punchline remove-bot">Punchline</h1>
+                <h5 class="subline">Subline</h5>
+                <div><a class="cta touch button -big -round -line-grey-lighten-5">CallToAction</a></div>
+              </div>
+            </div>
+            <div class="invite-to-scroll"></div>
+            <div class="shape"></div>
+          </section>
+
+
+          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Hero-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Hero-code.              &lt;section class=&quot;background hero&quot;&gt;
+                &lt;div class=&quot;main-texture&quot;&gt;&lt;/div&gt;
+                &lt;div id=&quot;main-background&quot;&gt;&lt;/div&gt;
+                &lt;div id=&quot;content&quot; class=&quot;container&quot;&gt;
+                  &lt;div class=&quot;twelve col&quot;&gt;
+                    &lt;h1 class=&quot;punchline remove-bot&quot;&gt;Punchline&lt;/h1&gt;
+                    &lt;h5 class=&quot;subline&quot;&gt;Subline&lt;/h5&gt;
+                    &lt;div&gt;&lt;a class=&quot;cta touch button -big -round -line-grey-lighten-5&quot;&gt;CallToAction&lt;/a&gt;&lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;invite-to-scroll&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;shape&quot;&gt;&lt;/div&gt;
+              &lt;/section&gt;
+
+
+   .bloc#template-Login    h5 Login    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <div id="loginModal" class="modal login">
             <div class="overlay close-modal"></div>
             <div class="content">
               <div class="card content-wrapper">
@@ -190,101 +284,7 @@ header#template-head  div    h3 templatesection.section#template  .bloc#temp
             });
             // closeModal function is already present
 
-  .bloc#template-Hero    h5 Hero    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <section class="background hero">
-            <div class="main-texture"></div>
-            <div id="main-background"></div>
-            <div id="content" class="container">
-              <div class="twelve col">
-                <h1 class="punchline remove-bot">Punchline</h1>
-                <h5 class="subline">Subline</h5>
-                <div><a class="cta touch button -big -round -line-grey-lighten-5">CallToAction</a></div>
-              </div>
-            </div>
-            <div class="invite-to-scroll"></div>
-            <div class="shape"></div>
-          </section>
-
-
-          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Hero-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Hero-code.              &lt;section class=&quot;background hero&quot;&gt;
-                &lt;div class=&quot;main-texture&quot;&gt;&lt;/div&gt;
-                &lt;div id=&quot;main-background&quot;&gt;&lt;/div&gt;
-                &lt;div id=&quot;content&quot; class=&quot;container&quot;&gt;
-                  &lt;div class=&quot;twelve col&quot;&gt;
-                    &lt;h1 class=&quot;punchline remove-bot&quot;&gt;Punchline&lt;/h1&gt;
-                    &lt;h5 class=&quot;subline&quot;&gt;Subline&lt;/h5&gt;
-                    &lt;div&gt;&lt;a class=&quot;cta touch button -big -round -line-grey-lighten-5&quot;&gt;CallToAction&lt;/a&gt;&lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;invite-to-scroll&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;shape&quot;&gt;&lt;/div&gt;
-              &lt;/section&gt;
-
-
-   .bloc#template-Footer    h5 Footer    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <footer id="footer">
-            <div class="container">
-              <div class="row">
-                <div class="three col">
-                  <div id="logo"></div>
-                </div>
-                <div class="three col">
-                  <h6>Réseaux sociaux</h6>
-                  <ul>
-                    <li><a href="#">Google +</a></li>
-                    <li><a href="http://twitter.com/peon_actu">Twitter</a></li>
-                    <li><a href="http://facebook.com/gopeon">Facebook</a></li>
-                  </ul>
-                </div>
-                <div class="three col">
-                  <h6>Presse</h6>
-                  <ul>
-                    <li><a href="#"></a>Contactez-nous</li>
-                    <li><a href="#"></a></li>
-                  </ul>
-                </div>
-                <div class="three col">
-                  <h6>Légal</h6>
-                  <ul>
-                    <li><a href="#">Mentions-légales</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </footer>
-
-
-          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Footer-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Footer-code.              &lt;footer id=&quot;footer&quot;&gt;
-                &lt;div class=&quot;container&quot;&gt;
-                  &lt;div class=&quot;row&quot;&gt;
-                    &lt;div class=&quot;three col&quot;&gt;
-                      &lt;div id=&quot;logo&quot;&gt;&lt;/div&gt;
-                    &lt;/div&gt;
-                    &lt;div class=&quot;three col&quot;&gt;
-                      &lt;h6&gt;Réseaux sociaux&lt;/h6&gt;
-                      &lt;ul&gt;
-                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Google +&lt;/a&gt;&lt;/li&gt;
-                        &lt;li&gt;&lt;a href=&quot;http://twitter.com/peon_actu&quot;&gt;Twitter&lt;/a&gt;&lt;/li&gt;
-                        &lt;li&gt;&lt;a href=&quot;http://facebook.com/gopeon&quot;&gt;Facebook&lt;/a&gt;&lt;/li&gt;
-                      &lt;/ul&gt;
-                    &lt;/div&gt;
-                    &lt;div class=&quot;three col&quot;&gt;
-                      &lt;h6&gt;Presse&lt;/h6&gt;
-                      &lt;ul&gt;
-                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;&lt;/a&gt;Contactez-nous&lt;/li&gt;
-                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;&lt;/a&gt;&lt;/li&gt;
-                      &lt;/ul&gt;
-                    &lt;/div&gt;
-                    &lt;div class=&quot;three col&quot;&gt;
-                      &lt;h6&gt;Légal&lt;/h6&gt;
-                      &lt;ul&gt;
-                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Mentions-légales&lt;/a&gt;&lt;/li&gt;
-                      &lt;/ul&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/div&gt;
-              &lt;/footer&gt;
-
-
-   .bloc#template-Navigation    h5 Navigation    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <nav>
+  .bloc#template-Navigation    h5 Navigation    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <nav>
             <div class="container">
               <div class="row">
                 <div class="twelve col">
